style(persistence): improve the code style