@@ -1,5 +1,9 @@
 package eu.domibus.connector.persistence.testutil;
 
+import java.sql.Connection;
+import java.sql.SQLException;
+import java.util.List;
+import java.util.stream.Stream;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.springframework.core.io.ClassPathResource;
@@ -7,18 +11,15 @@ import org.springframework.jdbc.datasource.init.ScriptUtils;
 import org.testcontainers.containers.JdbcDatabaseContainer;
 import org.testcontainers.containers.OracleContainer;
 
-import java.sql.Connection;
-import java.sql.SQLException;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-public class OracleContainerTestDatabaseFactory extends AbstractContainerTestDatabaseFactory implements TestDatabaseFactory {
-
-    private static final Logger LOGGER = LogManager.getLogger(OracleContainerTestDatabaseFactory.class);
-
-    List<String> availableVersions = Stream.of("4.1.x", "3.5.x").collect(Collectors.toList());
-
+/**
+ * OracleContainerTestDatabaseFactory is a class that implements the TestDatabaseFactory interface
+ * and provides a factory for creating Oracle database instances running within Docker containers.
+ */
+public class OracleContainerTestDatabaseFactory extends AbstractContainerTestDatabaseFactory
+    implements TestDatabaseFactory {
+    private static final Logger LOGGER =
+        LogManager.getLogger(OracleContainerTestDatabaseFactory.class);
+    List<String> availableVersions = Stream.of("4.1.x", "3.5.x").toList();
     public static final String SID = "testsid";
     public static final String DB_DOMAIN = "example.com";
     public static final String DB_PASSWORD = "test";
@@ -33,29 +34,23 @@ public class OracleContainerTestDatabaseFactory extends AbstractContainerTestDat
         return "Oracle within Docker";
     }
 
-
     protected JdbcDatabaseContainer getDatabaseContainer(String version) {
-
         OracleContainer oracle = new OracleContainer("oracleinanutshell/oracle-xe-11g:1.0.0");
-
-        oracle
-            .withUsername("system")
-            .withPassword("oracle");
-
+        oracle.withUsername("system").withPassword("oracle");
 
         return oracle;
     }
 
-
+    @Override
     public TestDatabase createNewDatabase(String version) {
         ContainerTestDatabase testDatabase = new ContainerTestDatabase();
-        JdbcDatabaseContainer dbContainer = getDatabaseContainer(version);
+        var dbContainer = getDatabaseContainer(version);
         dbContainer.start();
 
         testDatabase.jdbcDatabaseContainer = dbContainer;
         testDatabase.version = version;
 
-        String driverClassName = dbContainer.getDriverClassName();
+        dbContainer.getDriverClassName();
 
         if (version != null) {
             String scriptFile = "/dbscripts/test/oracle/oracle_" + version + ".sql";
@@ -74,8 +69,7 @@ public class OracleContainerTestDatabaseFactory extends AbstractContainerTestDat
     @Override
     public boolean isAvailable(String version) {
 
-        return (availableVersions.contains(version) || version == null) && super.isDockerAndDriverAvailable(version);
+        return (availableVersions.contains(version) || version == null)
+            && super.isDockerAndDriverAvailable(version);
     }
-
-
 }
